--- a/TraceryTutorial/css/layout.css
+++ b/TraceryTutorial/css/layout.css
@@ -7,6 +7,18 @@
 	width: 100%;
 	height: 1200px;
 }
+
+#visualization {
+	z-index: 40;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	margin: 0px;
+	width: 100%;
+	height: 1200px;
+	pointer-events: none;
+}
+
 #column {
 	z-index: 10;
 	position: absolute;
@@ -14,26 +26,33 @@
 	right: 0;
 	top: 0px;
 	left: 0px;
-	width: 1400px;
-	height: 900px;
+	width: 800px;
+	height: 600px;
 	margin: 20px auto;
-	border: solid rgba(255, 255, 255, .3) 5px;
-	box-shadow: 0px 7px 28px rgba(0, 0, 0, .7);
+	
 }
-
-.view {
+#view {
 	z-index: 20;
 	top: 0px;
 	left: 0px;
 	position: absolute;
-	width: 1400px;
-	height: 800px;
+	width: 800px;
+	height: 600px;
 }
 
-#processingCanvas {
-	width: 100%;
-	height: 100%;
+
+
+#storyHolder {
+
+	z-index: 20;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+	width: 800px;
+	height: 600px;
 }
+
+
 
 #buttons {
 	z-index: 30;
